2012-11-11  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/iostream/Rstreambuf.h: implementing sync() so that flush works
        * src/Rstreambuf.cpp: implementation

2012-11-10  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: ensure function definitions are never stale
        * src/Attributes.cpp: add optional hook for inclusion of package types
        * examples/Attributes/Export.cpp: example use of Rcpp::export
        * examples/Attributes/Depends.cpp: example use of Rcpp::depends
        * examples/Attributes/sourceCpp.R: example use of sourceCpp()
        * examples/Attributes/cppFunction.R: example use of cppFunction()

2012-11-09  Romain Francois <romain@r-enthusiasts.com>

        * R/Attributes.R: Passing verbose from evalCpp to cppFunction
        * include/RcppCommon.h: include <limits> instead of <limits.h>
        * include/Rcpp/vector/CharacterVectorExtractionIterator.h: iterator class
        to quickly iterate over the content of a CharacterVector. The content that 
        is iterated over is to be considered read-only. 

2012-11-08  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: special sourceCpp handling for file within the src
        directory of a package; use .h as suffix for generated headers
        * src/Attributes.cpp: add information on arguments to Rcpp module;
        use inline rather than static linkage for generated C++ shims;
        generated headers: add header guard and use .h suffix;
        * man/cppFunction.Rd: update documentation
        * man/sourceCpp.Rd: update documentation
        * man/evalCpp.Rd: update documentation
        * man/exportAttribute.Rd: update documentation
        * man/interfacesAttribute.Rd: update documentation


2012-11-08  Romain Francois <romain@r-enthusiasts.com>

        * R/Module.R: Module functions taking no arguments don't get the ellipsis
        anymore in their formals
        * src/Module.cpp: passing up the number of arguments of the function