@@ -32,56 +32,19 @@
 namespace Rcpp {
 
     class Rostream : public std::ostream {
+    public:
+        Rostream( bool output ) :  buf(output), std::ostream( &buf ){}
         
     protected:
         Rstreambuf buf;
 	
-    public:
-        Rostream();
     };
     
     // declare global variable
     extern Rostream Rcout;
 
-    // template <int RTYPE> std::ostream& operator<<(std::ostream& out, const Rcpp::Vector< RTYPE >& v) {
-    //     out << "[1] " << v[0];
-    //     for (int i=1;i<v.size();i++) {
-    //         out << " " << v[i];
-    //     }
-    //     return out;  // for multiple << operators.
-    // }
-
-    // template <int RTYPE> std::ostream& operator<<(std::ostream& out, const Rcpp::Matrix< RTYPE >& m) {
-    //     // width of columns showing values
-    //     int val_col_width = 12;
-	
-    //     // width of first column, showing row index
-    //     int max_row_idx = m.rows() + 1;
-    //     int idx_col_width = 0;
-    //     while(max_row_idx > 0) {
-    //         max_row_idx /= 10;
-    //         idx_col_width++;
-    //     }
-	
-    //     // print column headers (add 1 to have R indexing)
-    //     out << std::setw( val_col_width + idx_col_width + 3 ) << "[,1]";
-    //     for (int jcol=1;jcol<m.ncol();jcol++) {
-    //         out << std::setw( val_col_width-2 ) << "[," << jcol+1 << "]";
-    //     }
-    //     out << std::endl;
-    //     for (int irow=0;irow<m.nrow();irow++) {
-    //         // print row header (add 1 to have R indexing)
-    //         out << "[" << std::setw( idx_col_width ) << irow+1 << ",]";
-	
-    //         // print values in current row
-    //         for (int jcol=0;jcol<m.ncol();jcol++) {
-    //             out << std::setw( val_col_width ) << m( irow, jcol );
-    //         }
-    //         out << std::endl;
-    //     }
-    //     return out;  // for multiple << operators.
-    // }
-
+    // declare global variable
+    extern Rostream Rcerr;
 }
 
 #endif
