@@ -2,7 +2,7 @@
 //
 // Rostream.h: Rcpp R/C++ interface class library -- stream buffer
 //
-// Copyright (C) 2011           Dirk Eddelbuettel, Romain Francois and Jelmer Ypma
+// Copyright (C) 2011 - 2012    Dirk Eddelbuettel, Romain Francois and Jelmer Ypma
 //
 // This file is part of Rcpp.
 //
@@ -32,6 +32,7 @@ namespace Rcpp {
 
     class Rstreambuf : public std::streambuf {
     public:
+        Rstreambuf(bool output_): output(output_){}
 		
     protected:
         virtual std::streamsize xsputn(const char *s, std::streamsize n );
@@ -39,6 +40,8 @@ namespace Rcpp {
         virtual int overflow(int c = EOF );
         
         virtual int sync() ;
+    private:
+        bool output ;
   };
 
 }
